--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "one-time": "^1.0.0",
     "readable-stream": "^3.4.0",
     "stack-trace": "0.0.x",
-    "triple-beam": "^1.3.0",
-    "winston-transport": "^4.4.0"
+    "triple-beam": "^1.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.3",
